.kubernetes/web/web-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "web"
  labels:
    app: "web"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "web"
  template:
    metadata:
      labels:
        app: "web"
    spec:
      restartPolicy: Always
      containers:
      - name: web
        image: web
        ports:
        - containerPort: 3000
          name: web
